[package]
name = "yew-infinite-for"
version = "0.1.0"
edition = "2021"
authors=["Nerd <hndppt@outlook.com>"]
description="A list component that scrolls infinitely for Yew.."
license="MIT OR Apache-2.0"
keywords=["yew", "wasm", "infinite", "lazy", "list"]
categories=[
    "wasm",
]
publish=false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build]
target="wasm32-unknown-unknown"

[dependencies]
yew="0.19"

[dependencies.web-sys]
features = ["HtmlInputElement", "HtmlDivElement"]
version = "0.3.59"