[package]
authors = ["Nerd <hndppt@outlook.com>"]
categories = [
  "wasm",
  "GUI",
  "Template engine",
  "Web programming",
]
description = "A list component that scrolls infinitely for Yew.."
edition = "2021"
keywords = ["yew", "wasm", "web", "lazy", "list"]
license = "MIT OR Apache-2.0"
name = "yew-infinite-for"
publish = true
repository = "https://github.com/1216892614/Yew-InfiniteFor.rs"
version = "0.1.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build]
target = "wasm32-unknown-unknown"

[dependencies]
yew = "0.19"

[dependencies.web-sys]
features = ["HtmlInputElement", "HtmlDivElement"]
version = "0.3.59"
